# complex-processes-2025-hamish-watt-and-nathan-young

./: CMakeLists.txt  README.md  buildiso.sh  compile_commands.json  resource.rc
src/: fillcolor.asm  graphics.c  graphics.h  main.c  msg.c  msg.h  screen.c  screen.h  utils.c  utils.h  vwnd.c  vwnd.h  window_api.h
src/applications/: application.c  application.h  applications.c  applications.h  desktop.c  kfind.c  notepad.c  taskbar.c  test_app_1.c  test_app_2.c  topbar.c  welcome.c
src/asm/: fillcolor.asm  fillgradient.asm
src/elements/: elements.c  elements.h
src/win32/: window_api_win32.c
